Removing a lot of code style issues